exports[`test appends classes 1`] = `
<div className="input append me" style={{...}}>
<Label labelFor="2" labelName="Test Name" disabed={false} />
<input id="2" type="file" placeholder="testholder" name="testname" className={{...}} disabled={false} onBlur={[Function]} onFocus={[Function]} onChange={[Function]} defaultValue={{...}} style={{...}} autofocus={false} format={[Function]} validation={[Function]} status={{...}} errorTest={{...}} theme={{...}} classes={{...}} label="Test Name" hideLabel={false} inputClasses={{...}} />
</div>
`;

exports[`test has error state 1`] = `
<div className="input input--alert" style={{...}}>
<Label labelFor="2" labelName="Test Name" disabed={false} />
<input id="2" type="file" placeholder="testholder" name="testname" className={{...}} disabled={false} onBlur={[Function]} onFocus={[Function]} onChange={[Function]} defaultValue={{...}} style={{...}} autofocus={false} format={[Function]} validation={[Function]} status={{...}} errorTest={{...}} theme={{...}} classes={{...}} label="Test Name" hideLabel={false} inputClasses={{...}} />
</div>
`;

exports[`test has focused state 1`] = `
<div className="input input--focused" style={{...}}>
<Label labelFor="2" labelName="Test Name" disabed={false} />
<input id="2" type="file" placeholder="testholder" name="testname" className={{...}} disabled={false} onBlur={[Function]} onFocus={[Function]} onChange={[Function]} defaultValue={{...}} style={{...}} autofocus={false} format={[Function]} validation={[Function]} status={{...}} errorTest={{...}} theme={{...}} classes={{...}} label="Test Name" hideLabel={false} inputClasses={{...}} />
</div>
`;

exports[`test hides the label 1`] = `
<div className="input" style={{...}}>
<input id="2" type="file" placeholder="testholder" name="testname" className={{...}} disabled={false} onBlur={[Function]} onFocus={[Function]} onChange={[Function]} defaultValue={{...}} style={{...}} autofocus={false} format={[Function]} validation={[Function]} status={{...}} errorTest={{...}} theme={{...}} classes={{...}} label="Test Name" hideLabel={true} inputClasses={{...}} />
</div>
`;

exports[`test overrides with theme 1`] = `
<div className="mytheme" style={{...}}>
<Label labelFor="2" labelName="Test Name" disabed={false} />
<input id="2" type="file" placeholder="testholder" name="testname" className={{...}} disabled={false} onBlur={[Function]} onFocus={[Function]} onChange={[Function]} defaultValue={{...}} style={{...}} autofocus={false} format={[Function]} validation={[Function]} status={{...}} errorTest={{...}} theme={{...}} classes={{...}} label="Test Name" hideLabel={false} inputClasses={{...}} />
</div>
`;

exports[`test renderHelpText renders if error and error text 1`] = `
<span
  className="input__status">
  error
</span>
`;

exports[`test renderHelpText renders if status 1`] = `
<span
  className="input__status">
  status message
</span>
`;

exports[`test renders with props 1`] = `
<div className="input" style={{...}}>
<Label labelFor="2" labelName="Test Name" disabed={false} />
<input id="2" type="file" placeholder="testholder" name="testname" className={{...}} disabled={false} onBlur={[Function]} onFocus={[Function]} onChange={[Function]} defaultValue={{...}} style={{...}} autofocus={false} format={[Function]} validation={[Function]} status={{...}} errorTest={{...}} theme={{...}} classes={{...}} label="Test Name" hideLabel={false} inputClasses={{...}} />
</div>
`;
